@@ -145,7 +145,7 @@ public class Gui4jCellTableFactory extends Gui4jJComponentFactory {
           int col = getIntValue(gui4jComponentContainer, child, COL);
 
           if (col < 0 || col >= cols) {
-            Object[] args = {new Integer(col), new Integer(cols)};
+            Object[] args = {Integer.valueOf(col), Integer.valueOf(cols)};
             throw new Gui4jUncheckedException.ResourceError(
                 gui4jComponentContainer.getConfigurationName(),
                 Gui4jComponentContainerManager.getLineNumber(child),
@@ -183,7 +183,7 @@ public class Gui4jCellTableFactory extends Gui4jJComponentFactory {
           int row = getIntValue(gui4jComponentContainer, child, ROW);
 
           if (row < 0 || row >= rows) {
-            Object[] args = {new Integer(row), new Integer(rows)};
+            Object[] args = {Integer.valueOf(row), Integer.valueOf(rows)};
             throw new Gui4jUncheckedException.ResourceError(
                 gui4jComponentContainer.getConfigurationName(),
                 Gui4jComponentContainerManager.getLineNumber(child),
@@ -221,7 +221,7 @@ public class Gui4jCellTableFactory extends Gui4jJComponentFactory {
           int row = getIntValue(gui4jComponentContainer, child, ROW);
 
           if (col < 0 || col >= cols) {
-            Object[] args = {new Integer(col), new Integer(cols)};
+            Object[] args = {Integer.valueOf(col), Integer.valueOf(cols)};
             throw new Gui4jUncheckedException.ResourceError(
                 gui4jComponentContainer.getConfigurationName(),
                 Gui4jComponentContainerManager.getLineNumber(child),
@@ -230,7 +230,7 @@ public class Gui4jCellTableFactory extends Gui4jJComponentFactory {
           }
 
           if (row < 0 || row >= rows) {
-            Object[] args = {new Integer(row), new Integer(rows)};
+            Object[] args = {Integer.valueOf(row), Integer.valueOf(rows)};
             throw new Gui4jUncheckedException.ResourceError(
                 gui4jComponentContainer.getConfigurationName(),
                 Gui4jComponentContainerManager.getLineNumber(child),
@@ -324,7 +324,7 @@ public class Gui4jCellTableFactory extends Gui4jJComponentFactory {
               Gui4jTextAttribute.getInstance(this, gui4jCellTable, child);
 
           if (gui4jCellTable.isDefined(row, col)) {
-            Object[] args = {new Integer(row), new Integer(col)};
+            Object[] args = {Integer.valueOf(row), Integer.valueOf(col)};
             throw new Gui4jUncheckedException.ResourceError(
                 gui4jComponentContainer.getConfigurationName(),
                 Gui4jComponentContainerManager.getLineNumber(child),
