@@ -47,7 +47,7 @@ import javax.swing.SwingUtilities;
  */
 public class RootWindow {
   public static final Integer DEFAULT_MAXED_LAYER =
-      new Integer(JLayeredPane.PALETTE_LAYER.intValue() - 10);
+      Integer.valueOf(JLayeredPane.PALETTE_LAYER.intValue() - 10);
   private static final HashMap MAP_BY_ROOT_CONTAINER = new HashMap();
   private LayoutManager maxedLayout;
   private Integer maximizationLayer;
